--- a/index.html
+++ b/index.html
@@ -230,6 +230,51 @@
         <td>bayat</td>
       </tr>
     </table>
+    <ul class="w3-text-white">
+      <li>food</li>
+      <li>
+        <img
+          src="https://cdn.vox-cdn.com/thumbor/iaVMlcV5rj0OuPejZ7HyqYslLZk=/0x0:800x333/1400x788/filters:focal(334x72:462x200):format(gif)/cdn.vox-cdn.com/uploads/chorus_image/image/55278741/gatsby.0.gif"
+          alt="leonardo"
+          style="width: 200px; height: 100px"
+        />
+      </li>
+      <li>
+        <a href="https://www.w3schools.com" target="_blank">W3Schools</a>
+      </li>
+      <li>
+        tea
+        <ul>
+          <li>
+            black tea
+            <ul>
+              <li>black tea chinese</li>
+              <li>
+                <ul>
+                  <li>black tea african #1</li>
+                  <li>black tea african #2</li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li>green tea</li>
+        </ul>
+      </li>
+
+      <li>hat</li>
+    </ul>
+    <hr />
+    <ol type="I" class="w3-text-white">
+      <li>
+        man
+        <ol>
+          <li>old man</li>
+          <li>younge man</li>
+        </ol>
+      </li>
+      <li>woman</li>
+      <li>kid</li>
+    </ol>
     <script>
       function myfunc() {
         alert("you clicked on monitor and you'll be directed to wikipedia now");
